--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.44.4",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-sketch-canvas": "^6.2.0",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
